# omfiles-benchmarks

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run_era5_benchmark.sh
.github/workflows/: ruff.yml
.zed/: settings.json
Swift/: Package.resolved  Package.swift
Swift/Sources/: main.swift
helpers/: args.py  plotting.py  results.py  schemas.py  stats.py
helpers/io/: readers.py  writers.py
lang_compare/Swift/: Package.resolved  Package.swift
lang_compare/Swift/Sources/: main.swift
lang_compare/python/: om-python-bm.py
lang_compare/rust/: Cargo.toml
lang_compare/rust/src/: main.rs
lang_compare/typescript/: om-typescript-bm.js  package-lock.json  package.json
rust/src/: main.rs
scripts/: compare_implementations.py  concurrent_read_benchmarks.py  download_bm_dataset.py  download_era5.py  era5_pareto.py  era5_read_write_time_memory.py  generate_and_write_bm_datasets.py  read_benchmark.py  read_era5.py
src/om_benchmarks/: AsyncTyper.py  configurations.py  constants.py  formats.py  modes.py  mse.py  parse_tuple.py  plotting.py  read_indices.py  results.py  schemas.py  script_utils.py  stats.py  utils.py
src/om_benchmarks/helpers/: bm_reader.py  bm_writer.py  constants.py  era5.py  formats.py  mse.py  parse_tuple.py  plotting.py  prints.py  results.py  schemas.py  script_utils.py  stats.py
src/om_benchmarks/helpers/io/: readers.py  writer_configs.py  writers.py
src/om_benchmarks/io/: MemoryMappedStore.py  readers.py  writer_configs.py  writers.py
src/om_benchmarks/plotting/: concurrency_plots.py  formatters.py  lang_compare_plots.py  params.py  read_write_plots.py
typescript/: om-typescript-bm.js  package.json
