[project]
name = "om_benchmarks"
version = "0.1.0"
description = "Benchmark omfiles against other multidimensional array file formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "omfiles@git+https://github.com/open-meteo/python-omfiles.git#egg=main",
    "hidefix",
    "h5py",
    "netCDF4",
    # pin zarr3 because of compressor issues:
    # https://github.com/zarr-developers/zarr-python/issues/2900
    "zarr==3.0.3",
    "zarrs",
    "tensorstore",
    "polars",
    "altair",
    "vl-convert-python",
    "pillow",
    "cdsapi",
    "typer>=0.16.0",
    "hdf5plugin>=5.1.0",
    "pcodec>=0.3.5",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
unfixable = ["F401"]
# Add import sorting rules (I-prefixed rules)
extend-select = ["I"]

[tool.uv]
package = true
