[project]
name = "om_benchmarks"
version = "0.1.0"
description = "Benchmark omfiles against other multidimensional array file formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "omfiles@git+https://github.com/open-meteo/python-omfiles.git@5986b2ecc361303c5ec2e1349aeda5dcf119f44c",
    "hidefix",
    "h5py",
    "netCDF4",
    # pin zarr3 because of compressor issues:
    # https://github.com/zarr-developers/zarr-python/issues/2900
    # "zarr==3.0.3",
    "zarr@git+https://github.com/terraputix/zarr-python.git@d220542dc5c51d648fcdb8c659bbe364c5af9e80",
    "zarrs",
    "tensorstore",
    "polars",
    "cdsapi",
    "typer>=0.16.0",
    "hdf5plugin>=5.1.0",
    "memray>=1.17.2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pcodec>=0.3.5",
    "python-dotenv>=1.1.1",
    "xbitinfo@git+https://github.com/observingClouds/xbitinfo@main",
    # "julia>=0.6.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
unfixable = ["F401"]
# Add import sorting rules (I-prefixed rules)
extend-select = ["I"]

[tool.uv]
package = true
